<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@drawable/header_bg_red">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_5"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/privacy_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_18"
            tools:ignore="MissingPrefix" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollview_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/dim_10"
        android:layout_marginBottom="@dimen/dim_10"
        android:layout_above="@+id/rlt_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

           <!-- <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dim_10"
                android:layout_marginRight="@dimen/dim_10"
                android:layout_marginTop="@dimen/dim_5"
                app:cardCornerRadius="@dimen/dim_15">-->

                <ScrollView
                    android:id="@+id/scroll_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_border"
                    android:layout_marginLeft="@dimen/dim_10"
                    android:layout_marginRight="@dimen/dim_10"
                    android:layout_marginTop="@dimen/dim_5"
                    android:layout_marginBottom="@dimen/dim_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dim_5"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/dim_5">


                        <TextView
                            android:id="@+id/tvInstructions2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rubik_regular"
                            android:gravity="left"
                            android:includeFontPadding="false"
                            android:letterSpacing="0.01"
                            android:lineSpacingExtra="@dimen/dim_1"
                            android:text="@string/terms_and_condition"
                            android:lineSpacingMultiplier="1.2"
                            android:textColor="@color/black_font"
                            android:textSize="@dimen/textSize_15"
                            tools:ignore="MissingPrefix" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_below="@+id/scroll_terms"
                            android:layout_alignParentBottom="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dim_20"
                                android:gravity="center_horizontal"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tvPrivacyPolicy"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:fontFamily="@font/rubik_medium"
                                    android:gravity="center"
                                    android:includeFontPadding="false"
                                    android:text="@string/privacy_policy"
                                    android:textAlignment="center"
                                    android:textColor="@color/blue"
                                    android:textSize="@dimen/textSize_15"
                                    tools:ignore="MissingPrefix" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:fontFamily="@font/rubik_medium"
                                    android:gravity="center"
                                    android:includeFontPadding="false"
                                    android:text="  and  "
                                    android:textAlignment="center"
                                    android:textColor="@color/black_font"
                                    android:textSize="@dimen/textSize_15"
                                    tools:ignore="MissingPrefix" />

                                <TextView
                                    android:id="@+id/tvTerms"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:fontFamily="@font/rubik_medium"
                                    android:gravity="center"
                                    android:includeFontPadding="false"
                                    android:maxLines="1"
                                    android:text="@string/app_terms"
                                    android:textAlignment="center"
                                    android:textColor="@color/blue"
                                    android:textSize="@dimen/textSize_15"
                                    tools:ignore="MissingPrefix" />
                            </LinearLayout>

                            <androidx.appcompat.widget.AppCompatCheckBox
                                android:id="@+id/cbAgree"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dim_5"
                                android:layout_marginBottom="@dimen/dim_10"
                                android:buttonTint="@color/black_font"
                                android:fontFamily="@font/rubik_regular"
                                android:includeFontPadding="false"
                                android:paddingStart="@dimen/dim_2"
                                android:text="@string/i_agree_terms"
                                android:textColor="@color/black_font"
                                android:textSize="@dimen/textSize_14"
                                android:layout_gravity="center"
                                tools:ignore="MissingPrefix" />






                        </LinearLayout>



                        <!--            android:background="@drawable/bg_sidemenu_social_white"-->
                    </LinearLayout>

                </ScrollView>




<!--            </androidx.cardview.widget.CardView>-->






        </LinearLayout>


    </ScrollView>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:id="@+id/rlt_button">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dim_10">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIAgree"
            android:layout_width="@dimen/dim_150"
            android:layout_height="@dimen/dim_45"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dim_10"
            android:background="@drawable/selector_button_gradient"
            android:enabled="false"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:paddingLeft="@dimen/dim_30"
            android:paddingRight="@dimen/dim_30"
            android:text="@string/i_accept"
            android:layout_marginStart="@dimen/_20sdp"
            android:textAllCaps="false"
            android:textColor="@color/button_selector"
            android:textSize="@dimen/textSize_15" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnQuit"
            android:layout_width="@dimen/dim_150"
            android:layout_height="@dimen/dim_45"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dim_5"
            android:background="@null"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingLeft="@dimen/dim_30"
            android:paddingRight="@dimen/dim_30"
            android:text="@string/quit"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_16" />

    </LinearLayout>

</RelativeLayout>



</RelativeLayout>